# lynxmonitor

./: Cargo.toml  README.md
src/: main.rs  models.rs
src/collectors/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  system.rs
src/process/: manager.rs
src/ui/: engine.rs
src/utils/: logger.rs
