[package]
name = "lynxmonitor"
version = "0.1.0"
edition = "2021"
authors = ["LynxMonitor Team"]
description = "Modern Linux System Monitor"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
chrono = "0.4"
libc = "0.2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
